--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.7.2"
+    "cypress": "^13.7.2",
+    "cypress-plugin-api": "^2.11.1"
   },
   "dependencies": {
     "mongodb": "^6.5.0"
